# Whisper-Finetune

./: .gitignore  CLAUDE.md  claude.md  custom_language.md  evaluation.py  finetune.md  finetune.py  infer.py  language.md  merge_lora.py  pyproject.toml
utils/: callback.py  reader.py
